--- a/styles.css
+++ b/styles.css
@@ -213,8 +213,8 @@ img{
   color: var(--first-color);
 }
 .home__img{
-  position: absolute;
-  margin-bottom:-20%;
+  position: center;
+  
   right: 0;
   bottom: 0;
   width: 150px;
