--- a/styles.css
+++ b/styles.css
@@ -215,11 +215,12 @@ img{
 .home__img{
 
   Justify-content: center;
+  padding: 10px;
   right: 0;
   bottom: 0;
+  width:200px;
 
 
-  width: 200px;
 
 }
 
